crates/fittle-cli/tests/snapshots/corpus__info__edge__rice__i32-original.fits.snap
---
source: crates/fittle-cli/tests/corpus.rs
expression: json
---
{
  "derived": {
    "plate_solved": false
  },
  "fields": {},
  "file_name": {},
  "health": [],
  "image": {
    "bitpix": 32,
    "compressed": false,
    "hdu": 0,
    "height": 48,
    "planes": 1,
    "width": 64
  },
  "notes": [],
  "origin": {
    "software": []
  },
  "path": "edge/rice/i32-original.fits",
  "schema": "fittle.info/1",
  "verdict": {
    "confidence": 0,
    "evidence": [
      {
        "supports": "single",
        "text": "no STACKCNT / NCOMBINE",
        "weight": 25
      }
    ],
    "frame": "unknown",
    "integrated": false,
    "label": "Unknown",
    "processed": false
  }
}
