crates/fittle-cli/tests/snapshots/corpus__info__edge__rice__q-nodither.fits.fz.snap
---
source: crates/fittle-cli/tests/corpus.rs
expression: json
---
{
  "derived": {
    "plate_solved": false
  },
  "fields": {},
  "file_name": {},
  "health": [],
  "image": {
    "bitpix": -32,
    "compressed": true,
    "hdu": 1,
    "height": 48,
    "planes": 1,
    "width": 64
  },
  "notes": [],
  "origin": {
    "software": []
  },
  "path": "edge/rice/q-nodither.fits.fz",
  "schema": "fittle.info/1",
  "verdict": {
    "confidence": 0,
    "evidence": [
      {
        "supports": "single",
        "text": "no STACKCNT / NCOMBINE",
        "weight": 25
      },
      {
        "supports": "integrated",
        "text": "BITPIX=-32 (float)",
        "weight": 10
      }
    ],
    "frame": "unknown",
    "integrated": false,
    "label": "Unknown",
    "processed": false
  }
}
